fixed about us images on smaller screens

--- a/src/components/about_us/Members.module.css
+++ b/src/components/about_us/Members.module.css
@@ -8,12 +8,11 @@
 }
 
 .circleimage {
-    border-radius: 80%;
+    border-radius: 50%;
     width: 250px;
-    height: 250px;
- 
+    max-height: 250px;
+    aspect-ratio: 1/1;
     object-fit: cover;
-  
 }
 
 .memberName {
@@ -38,7 +37,7 @@
     gap: 50px;
     flex-grow: 1;
     justify-content: center;
-    padding: 100px;
+    padding: 50px;
     font-family: Arial, Helvetica, sans-serif;
     
 
@@ -173,6 +172,13 @@
 @media only screen and (max-width: 750px) {
     .omOssWrapper {
       width: 100%;
+    }
+    .styremedlemmer {
+        flex-direction: column;
+        flex-wrap: nowrap;
+        padding: 0;
+        align-items: center;
+        justify-items: center;
     }
   }
 
